<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_marginBottom="8dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/valueName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/textReleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="A new hope A new hope" />

    <TextView
        android:id="@+id/textReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/film_release_note" />

    <TextView
        android:id="@+id/valueReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textReleaseDate"
        tools:text="1977/05/25" />

    <TextView
        android:id="@+id/textDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valueName"
        android:text="@string/film_director" />

    <TextView
        android:id="@+id/valueDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDirector"
        tools:text="George Lucas" />

    <TextView
        android:id="@+id/textProducer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/valueDirector"
        app:layout_constraintTop_toBottomOf="@id/valueName"
        android:text="@string/film_producer" />

    <TextView
        android:id="@+id/valueProducer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/valueDirector"
        app:layout_constraintTop_toBottomOf="@id/textDirector"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Gary Kurtz, Rick McCallum" />

    <TextView
        android:id="@+id/valueDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valueDirector"
        tools:text="Cupcake ipsum dolor. Sit amet donut dessert donut dragée. Cookie danish chocolate cake donut apple pie pudding. Sweet roll wafer cupcake toffee macaroon halvah." />
</androidx.constraintlayout.widget.ConstraintLayout>